# tmi-parser

./: Cargo.toml  README.md
src/: lib.rs  message.rs  tags.rs
tests/: cap.rs  clear.rs  hosttarget.rs  join.rs  misc.rs  nick.rs  notice.rs  part.rs  pass.rs  privmsg.rs  state.rs  tagvalue.rs
