[package]
name = "tmi-parser"
version = "0.1.2-alpha"
authors = ["bynect <68197565+bynect@users.noreply.github.com>"]
edition = "2018"
description = "A simple, dependency-less library for parsing IRC-based TMI message."
license = "MIT"
readme = "README.md"
keywords = ["tmi", "twitch", "parser", "api", "message-parser"]
categories = ["parsing", "api-bindings"]
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/bynect/tmi-parser"

[dependencies]
